--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Hexo
 subtitle: "A fast, simple & powerful blog framework powered by Node.js."
 description: "Hexo is a fast, simple & powerful blog framework powered by Node.js."
 author: Hexo
-language: en
+language: zh-CN
 timezone: UTC
 
 url: https://hexo.io
@@ -14,7 +14,7 @@ new_post_name: :year-:month-:day-:title.md # File name of new posts
 post_asset_folder: true
 per_page: 0
 
-theme: navy
+theme: next
 deploy:
   type: git
   repo: git@github.com:hexojs/hexojs.github.io.git
